try to fix workflow issue

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,15 +1,9 @@
-# This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
-# For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
-
 name: Node CI
 
 on: [push]
 
 jobs:
-      - uses: actions/upload-artifact@master
-    needs: build
-          name: webpack artifacts
-          path: public/
+  build:
 
     runs-on: ubuntu-latest
 
@@ -19,23 +13,15 @@ jobs:
         run: |
           npm install
           npm run build
-      - uses: actions/upload-artifact@master
-        with:
-          name: webpack artifacts
-          path: public/
 
-    - uses: actions/download-artifact@master
-      with:
-        name: webpack artifacts
-        path: public
-    - name: npm install, and test
+  test:
 
     runs-on: ubuntu-latest
 
     strategy:
       matrix:
         os: [ubuntu-latest, windows-2016]
-        node-versions: [12.x, 14.x]
+        node-version: [12.x, 14.x]
 
     steps:
     - uses: actions/checkout@v2
@@ -47,5 +33,5 @@ jobs:
       run: |
         npm install
         npm test
-      env: 
+      env:
         CI: true
